--- a/ansible-playbooks/deploy.yml
+++ b/ansible-playbooks/deploy.yml
@@ -2,5 +2,7 @@
   hosts: all
   become: yes
   gather_facts: yes
-  roles:
-      - sample
+  tasks:
+    - debug:
+        msg: "debug test"
+       
