--- a/ansible-playbooks/deploy.yml
+++ b/ansible-playbooks/deploy.yml
@@ -1,7 +1,7 @@
 - name: Application setup for complete stack
   hosts: all
   become: yes
-  gather_facts: yes
+  gather_facts: no
   tasks:
     - debug:
         msg: "debug test"
