--- a/ansible-playbooks/setup-local-facts.yml
+++ b/ansible-playbooks/setup-local-facts.yml
@@ -16,4 +16,4 @@
     - name: Setup Facts 
       template:
         dest: /etc/ansible/facts.d/info.fact
-        src: ansible-playbooks/templates/info.fact.j2
+        src: info.fact.j2
