--- a/ansible-playbooks/roles/sample/tasks/db.yml
+++ b/ansible-playbooks/roles/sample/tasks/db.yml
@@ -34,7 +34,7 @@
 
 - name: create database user 
   mysql_user:
-     name: "{{DBUSER}}"
+   name: "{{DBUSER}}"
      password: "{{DBPASS}}"
-     priv: 'studentappln.*:ALL'
+     priv: 'studentapp.*:ALL'
      host: "{{ansible_fqdn}}"
