--- a/ansible-playbooks/roles/sample/vars/main.yml
+++ b/ansible-playbooks/roles/sample/vars/main.yml
@@ -1,6 +1,7 @@
 - name: Getting tomcat url
   command: curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
   register: TOMCAT_URL
+TOMCAT_URL: $TOMCAT_URL
 
 TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
 
