--- a/ansible-playbooks/roles/sample/vars/main.yml
+++ b/ansible-playbooks/roles/sample/vars/main.yml
@@ -1,8 +1,5 @@
-- name: Getting tomcat url
-  command: curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
-  register: out
-  
-TOMCAT_URL: out
+ 
+TOMCAT_URL: curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
   
 TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
 
