--- a/ansible-playbooks/roles/sample/vars/main.yml
+++ b/ansible-playbooks/roles/sample/vars/main.yml
@@ -1,13 +1,10 @@
 - name: Getting tomcat url
-  command: "curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'"
+  command: curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
   register: TOMCAT_URL
   TOMCAT_URL: $TOMCAT_URL
   TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
   TOMCAT_DIR: "/home/studentappln/{{TAR_FILE | regex_replace('.tar.gz')}}"
-
-WAR_APP: https://github.com/cit31/project-1/raw/master/student.war
-  
-WAR_FILE: "{{ WAR_APP.split('/')|last }}"
-
-JDBC_URL: https://github.com/cit31/project-1/raw/master/mysql-connector-java-5.1.40.jar
-JDBC_FILE: "{{ JDBC_URL.split('/')|last }}"
+  WAR_APP: https://github.com/cit31/project-1/raw/master/student.war
+  WAR_FILE: "{{ WAR_APP.split('/')|last }}"
+  JDBC_URL: https://github.com/cit31/project-1/raw/master/mysql-connector-java-5.1.40.jar
+  JDBC_FILE: "{{ JDBC_URL.split('/')|last }}"
