--- a/ansible-playbooks/roles/sample/tasks/app.yml
+++ b/ansible-playbooks/roles/sample/tasks/app.yml
@@ -8,9 +8,8 @@
     name: studentappln
 
 - name: download & extract tomcat
-  get_url:  
-    url: "{{TOMCAT_URL}}"
-    dest: /home/studentappln/
+  command: "{{TOMCAT_URL}}"
+  dest: /home/studentappln/
   become_user: studentappln
 
 - name: Find files in webapps
