--- a/ansible-playbooks/roles/sample/tasks/app.yml
+++ b/ansible-playbooks/roles/sample/tasks/app.yml
@@ -7,11 +7,12 @@
   user:
     name: studentappln
 
-- name: download Tomcat file
-  get_url:
-      url: "{{TOMCAT_URL}}"
-      dest: "/home/studentappln/"
-  become_user: studentappln
+- name: tomcat donwload
+  command:
+  args:
+    vars:
+      - TOMCAT_URL
+      
 
 
 - name: Find files in webapps
