--- a/ansible-playbooks/roles/sample/tasks/app.yml
+++ b/ansible-playbooks/roles/sample/tasks/app.yml
@@ -7,10 +7,11 @@
   user:
     name: studentappln
 
-- name: download war file
-  get_url:
-      url: "{{TOMCAT_URL}}"
-      dest: "/home/studentappln"
+- name: download tomcat file
+  commands:
+      args:
+      argv:
+       {{TOMCAT_URL}}
   become_user: studentappln
       
 
