--- a/ansible-playbooks/roles/sample/tasks/app.yml
+++ b/ansible-playbooks/roles/sample/tasks/app.yml
@@ -8,9 +8,8 @@
     name: studentappln
 
 - name: download & extract tomcat file
-  get_url:
-      url: "{{TOMCAT_URL}}"
-      dest: /home/studentappln/
+  command: TOMCAT_URL
+  dest: /home/studentappln/
   become_user: studentappln
       
 
