--- a/ansible-playbooks/roles/sample/tasks/app.yml
+++ b/ansible-playbooks/roles/sample/tasks/app.yml
@@ -8,9 +8,9 @@
     name: studentappln
 
 - name: download & extract tomcat file
-   command: "{{TOMCAT_URL}}"
-    dest: /home/studentappln/
-   become_user: studentappln
+  command: sh "{{TOMCAT_URL}}"
+  dest: /home/studentappln/
+  become_user: studentappln
       
 
 
