--- a/ansible-playbooks/roles/sample/tasks/app.yml
+++ b/ansible-playbooks/roles/sample/tasks/app.yml
@@ -17,7 +17,7 @@
 
 - name: Find files in webapps
   find:
-    paths: "{{TOMCAT_DIR}}/webapps"
+    paths: "{{outtomcat.split('/')|last}}/webapps"
     file_type: any
   register: out
 
