--- a/ansible-playbooks/roles/sample/vars/main.yml
+++ b/ansible-playbooks/roles/sample/vars/main.yml
@@ -1,5 +1,5 @@
-  TOMCAT_URLPKG: sh wget curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
-  TOMCAT_URL: "{{outtomcat}}"
+  
+  TOMCAT_URL: sh wget curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
 
   TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
   TOMCAT_DIR: "/home/studentappln/{{TAR_FILE | regex_replace('.tar.gz')}}"
