--- a/ansible-playbooks/roles/sample/vars/main.yml
+++ b/ansible-playbooks/roles/sample/vars/main.yml
@@ -1,9 +1,13 @@
   
-  TOMCAT_URL: sh wget curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
-
-  TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
-  TOMCAT_DIR: "/home/studentappln/{{TAR_FILE | regex_replace('.tar.gz')}}"
-  WAR_APP: https://github.com/cit31/project-1/raw/master/student.war
-  WAR_FILE: "{{ WAR_APP.split('/')|last }}"
-  JDBC_URL: https://github.com/cit31/project-1/raw/master/mysql-connector-java-5.1.40.jar
-  JDBC_FILE: "{{ JDBC_URL.split('/')|last }}"
+  
+- name: use argv to send the command as a list.  Be sure to leave command empty
+  command:
+  args:
+    argv:
+      - TOMCAT_URL: wget curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
+      - TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
+      - TOMCAT_DIR: "/home/studentappln/{{TAR_FILE | regex_replace('.tar.gz')}}"
+      - WAR_APP: https://github.com/cit31/project-1/raw/master/student.war
+      - WAR_FILE: "{{ WAR_APP.split('/')|last }}"
+      - DBC_URL: https://github.com/cit31/project-1/raw/master/mysql-connector-java-5.1.40.jar
+      - DBC_FILE: "{{ JDBC_URL.split('/')|last }}" 
