--- a/ansible-playbooks/roles/sample/vars/main.yml
+++ b/ansible-playbooks/roles/sample/vars/main.yml
@@ -1,13 +1,11 @@
-  
-  
-- name: use argv to send the command as a list.  Be sure to leave command empty
-  command:
-  args:
-    argv:
-      - TOMCAT_URL: wget curl https://tomcat.apache.org/download-90.cgi | grep tar.gz | grep nofollow | head -1 | awk -F \" '{print $2}'
-      - TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
-      - TOMCAT_DIR: "/home/studentappln/{{TAR_FILE | regex_replace('.tar.gz')}}"
-      - WAR_APP: https://github.com/cit31/project-1/raw/master/student.war
-      - WAR_FILE: "{{ WAR_APP.split('/')|last }}"
-      - DBC_URL: https://github.com/cit31/project-1/raw/master/mysql-connector-java-5.1.40.jar
-      - DBC_FILE: "{{ JDBC_URL.split('/')|last }}" 
+TOMCAT_URL: https://www-us.apache.org/dist/tomcat/tomcat-9/v9.0.16/bin/apache-tomcat-9.0.16.tar.gz
+TAR_FILE: "{{ TOMCAT_URL.split('/')|last }}"
+
+TOMCAT_DIR: "/home/studentappln/{{TAR_FILE | regex_replace('.tar.gz')}}"
+
+
+WAR_APP: https://github.com/cit31/project-1/raw/master/student.war
+WAR_FILE: "{{ WAR_APP.split('/')|last }}"
+
+JDBC_URL: https://github.com/cit31/project-1/raw/master/mysql-connector-java-5.1.40.jar
+JDBC_FILE: "{{ JDBC_URL.split('/')|last }}"
