--- a/ansible-playbooks/deploy.yml
+++ b/ansible-playbooks/deploy.yml
@@ -21,4 +21,5 @@
       copy:
         src: /var/lib/jenkins/workspace/Create_studentproj_CICD/MAVEN/target/studentapi-${VERSIONNO}-${VERSIONTYPE}.war
         dest: "{{TOMCAT_DIR}}/webapps/student.war"
+        remote_src: yes
       become_user: studentappln
