--- a/ansible-playbooks/deploy.yml
+++ b/ansible-playbooks/deploy.yml
@@ -21,4 +21,6 @@
       copy:
         src: /var/lib/jenkins/workspace/student/testpipeline_converted/MAVEN/target/studentapi-${VERSIONNO}-${VERSIONTYPE}.war
         dest: "{{TOMCAT_DIR}}/webapps/student.war"
+        remote_src: yes
       become_user: studentappln
+
